25 Nov 2017
fix: index page poll
fix: index page latest torrents spacing
fix: index page torrents scroller when empty
fix: index page news block spacing
fix: global messages positioning
add: caching environment 'Scrapbook'
remove: redis requirement
remove: memcached and php-memcache requirement

14 Nov 2017
update: GeoIP files 
fix: iphistory.php view ip
fix: userdetails.php view ip
add: transition to notification buttons
fix: themeChanger active border
fix: lottery config
fix: userdetails.php tabs and anchors
update: faq
fix: scroll to anchor
merge: torrents-today.php into browse.php
fix: userdetails.php tabcontrol

12 Nov 2017
add: user stats and gifts in AJAX Chat
add: torrent search by uploader
add: port_check.php to assist in opening ports
add: hnrs.php so users can keep up with them
update: AJAX Chat channels, restrict messages origins
update: newsrss.php can accept arrays for feeds

11 Nov 2017
update: page uniformity
update: snatches.php, peerlist.php, viewnfo.php, report.php
update: global messages
add: doc blocks(a start)
update: filelist.php
update: torrents-today.php
update: notifications can accept arrays
update: ip storage(probably missed something)
update: lightbox v2.9.0, group every image on page, using lightbox, to create slideshow
update: raphael.js 2.2.7

6 Nov 2017
replace: jquery-ui accordion with smaller alternative
add: missing markItUp css 
optimize: gif images using gifsicle

5 Nov 2017
add: index page latest comments block(request)

4 Nov 2017
update: installer set bot name in config.php
fix: breadcrumbs
add: missing lnag index
remove: check for array index after changing to string
fix: compare array when array does not exist
fix: unset blocks not getting cached
fix: compare array where array is string
fix: error with newsfeeds before bot user created
fix: error with autoshout before bot user created
move: iframe resize to template
remove: checkbox for XBT install
add: missing function
update: config files
remove: unused javascript files