@@ -1,3 +1,6 @@
+26 Nov 2017
+remove: new up redis
+
 25 Nov 2017
 fix: index page poll
 fix: index page latest torrents spacing
